# blog-example

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml
app/: layout.tsx  page.tsx
app/posts/[id]/: page.tsx
components/: chat-menu.tsx  main-nav.tsx  page-header.tsx  site-footer.tsx  site-header.tsx
components/ui/: button.tsx
config/: docs.ts  site.ts
posts/: qlora-4-bit.md
types/: unist.ts
