[tool.poetry]
name = "graysonadkins-com"
version = "0.1.0"
description = ""
authors = ["gadkins <grayson.adkins@uffizzi.com>"]
readme = "README.md"
packages = [{include = "graysonadkins"}]

[tool.poetry.dependencies]
python = "^3.9"
nbconvert = "^7.14.0"
jupyterlab = "^4.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
